# square_array

./: .gitignore  CMakeLists.txt  README.md  atomic_sum.h  cuda_compat.h  debug.h  main.py  main_cuda.cpp  main_cupy.py  main_no_cuda.cpp  main_numpy.py  square_array.cpp  square_array.cu  square_array.h  square_op.h  utils.py
